# delimited

./: .gitignore  CsvOk.hs  README.md  delimited.cabal  parsers-csv.cabal  stack.yaml
src/: Lib.hs
src/Text/Delimited/: CSV.hs
src/Text/Delimited/CSV/: Parser.hs
src/Text/Parser/: CSV.hs
src/Text/Parser/CSV/: Record.hs
test/: Spec.hs
