name:                parsers-csv
version:             0.1.0.0
homepage:            https://github.com/nkpart/parsers-csv
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2017 Nick Partridge
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:     Text.Parser.CSV
                     , Text.Parser.CSV.Record
  build-depends:       base >= 4.7 && < 5
                     , parsers
                     , streaming
                     , mtl
                     , trifecta
                     , free
                     -- , separated
  default-language:    Haskell2010

executable csv-ok
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  main-is:             CsvOk.hs
  build-depends:       base
                     , parsers-csv
                     , trifecta
                     , free
                     , wl-pprint-terminfo

test-suite parsers-csv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsers-csv
                     , trifecta
                     , streaming
                     , mtl
                     , lens
                     , parsers
                     , free
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/parsers-csv
